--- a/src/app/home/components/home/home.component.tns.html
+++ b/src/app/home/components/home/home.component.tns.html
@@ -1,6 +1,1 @@
-<GridLayout rows="auto,auto">
-    <Label class="h1 title"
-        [text]="'home.title' | translate"></Label>
-    <Label class="p description" textWrap="true" row="1"
-        [text]="'home.description' | translate"></Label>
-</GridLayout>
+<label text="home"></label>
