--- a/nativescript/src/_app-common.scss
+++ b/nativescript/src/_app-common.scss
@@ -28,3 +28,15 @@
     font-size:32px;
     font-weight:bold;
 }
+
+.page {
+   align-items: center;
+   flex-direction: column;
+}
+
+.form {
+   margin-left: 30;
+   margin-right: 30;
+   flex-grow: 2;
+   vertical-align: middle;
+}
