--- a/src/styles/colors/light-blue-50.scss
+++ b/src/styles/colors/light-blue-50.scss
@@ -1,55 +1,14 @@
-.color-000 {
-   color:#E1F5FE;
-}
-
-.color-100 {
-   color:#B3E5FC;
-}
-
-.color-200 {
-   color:#81D4FA;
-}
-
-.color-300 {
-   color:#4FC3F7;
-}
-
-.color-400 {
-   color:#29B6F6;
-}
-
-.color-500 {
-   color:#03A9F4;
-}
-
-.color-600 {
-   color:#039BE5;
-}
-
-.color-700 {
-   color:#0288D1;
-}
-
-.color-800 {
-   color:#0277BD;
-}
-
-.color-900 {
-   color:#01579B;
-}
-
-.color-a100 {
-   color:#80D8FF;
-}
-
-.color-a200 {
-   color:#40C4FF;
-}
-
-.color-a400 {
-   color:#00B0FF;
-}
-
-.color-a700 {
-   color:#0091EA;
-}
+$color-000:#E1F5FE;
+$color-100:#B3E5FC;
+$color-200:#81D4FA;
+$color-300:#4FC3F7;
+$color-400:#29B6F6;
+$color-500:#03A9F4;
+$color-600:#039BE5;
+$color-700:#0288D1;
+$color-800:#0277BD;
+$color-900:#01579B;
+$color-a100:#80D8FF;
+$color-a200:#40C4FF;
+$color-a400:#00B0FF;
+$color-a700:#0091EA;
