--- a/src/styles/colors/indigo-50.scss
+++ b/src/styles/colors/indigo-50.scss
@@ -1,55 +1,14 @@
-.color-000 {
-   color:#E8EAF6;
-}
-
-.color-100 {
-   color:#C5CAE9;
-}
-
-.color-200 {
-   color:#9FA8DA;
-}
-
-.color-300 {
-   color:#7986CB;
-}
-
-.color-400 {
-   color:#5C6BC0;
-}
-
-.color-500 {
-   color:#3F51B5;
-}
-
-.color-600 {
-   color:#3949AB;
-}
-
-.color-700 {
-   color:#303F9F;
-}
-
-.color-800 {
-   color:#283593;
-}
-
-.color-900 {
-   color:#1A237E;
-}
-
-.color-a100 {
-   color:#8C9EFF;
-}
-
-.color-a200 {
-   color:#536DFE;
-}
-
-.color-a400 {
-   color:#3D5AFE;
-}
-
-.color-a700 {
-   color:#304FFE;
-}
+$color-000:#E8EAF6;
+$color-100:#C5CAE9;
+$color-200:#9FA8DA;
+$color-300:#7986CB;
+$color-400:#5C6BC0;
+$color-500:#3F51B5;
+$color-600:#3949AB;
+$color-700:#303F9F;
+$color-800:#283593;
+$color-900:#1A237E;
+$color-a100:#8C9EFF;
+$color-a200:#536DFE;
+$color-a400:#3D5AFE;
+$color-a700:#304FFE;
