--- a/src/styles/colors/lime-50.scss
+++ b/src/styles/colors/lime-50.scss
@@ -1,55 +1,14 @@
-.color-000 {
-   color:#F9FBE7;
-}
-
-.color-100 {
-   color:#F0F4C3;
-}
-
-.color-200 {
-   color:#E6EE9C;
-}
-
-.color-300 {
-   color:#DCE775;
-}
-
-.color-400 {
-   color:#D4E157;
-}
-
-.color-500 {
-   color:#CDDC39;
-}
-
-.color-600 {
-   color:#C0CA33;
-}
-
-.color-700 {
-   color:#AFB42B;
-}
-
-.color-800 {
-   color:#9E9D24;
-}
-
-.color-900 {
-   color:#827717;
-}
-
-.color-a100 {
-   color:#F4FF81;
-}
-
-.color-a200 {
-   color:#EEFF41;
-}
-
-.color-a400 {
-   color:#C6FF00;
-}
-
-.color-a700 {
-   color:#AEEA00;
-}
+$color-000:#F9FBE7;
+$color-100:#F0F4C3;
+$color-200:#E6EE9C;
+$color-300:#DCE775;
+$color-400:#D4E157;
+$color-500:#CDDC39;
+$color-600:#C0CA33;
+$color-700:#AFB42B;
+$color-800:#9E9D24;
+$color-900:#827717;
+$color-a100:#F4FF81;
+$color-a200:#EEFF41;
+$color-a400:#C6FF00;
+$color-a700:#AEEA00;
