--- a/src/styles/colors/template.scss
+++ b/src/styles/colors/template.scss
@@ -1,57 +1,16 @@
 /*
-.color-000 {
-   color:;
-}
-
-.color-100 {
-   color:;
-}
-
-.color-200 {
-   color:;
-}
-
-.color-300 {
-   color:;
-}
-
-.color-400 {
-   color:;
-}
-
-.color-500 {
-   color:;
-}
-
-.color-600 {
-   color:;
-}
-
-.color-700 {
-   color:;
-}
-
-.color-800 {
-   color:;
-}
-
-.color-900 {
-   color:;
-}
-
-.color-a100 {
-   color:;
-}
-
-.color-a200 {
-   color:;
-}
-
-.color-a400 {
-   color:;
-}
-
-.color-a700 {
-   color:;
-}
+$color-000:;
+$color-100:;
+$color-200:;
+$color-300:;
+$color-400:;
+$color-500:;
+$color-600:;
+$color-700:;
+$color-800:;
+$color-900:;
+$color-a100:;
+$color-a200:;
+$color-a400:;
+$color-a700:;
 */
