style login screen

--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -17,6 +17,8 @@
                      <Label col="1" text="Home" class="p-r-10"></Label>
                </grid-layout>
 
+               <stack-layout class="hr-light"></stack-layout>
+
                <grid-layout columns="auto, *" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/guide')" (tap)="onNavItemTap('/guide')">
                      <Label col="0" text="&#xf02d;" class="fa"></Label>
                      <Label col="1" text="Guide" class="p-r-10"></Label>
