--- a/src/app/user/components/login/login.component.tns.html
+++ b/src/app/user/components/login/login.component.tns.html
@@ -1,5 +1,9 @@
 <flexbox-layout class="page">
    <stack-layout class="form">
+
+      <image class="logo" src="res://icon"></image>
+      <label class="header" text="Climbing Guide"></label>
+
       <stack-layout class="input-field">
          <text-field #email [hint]="'login.email' | translate" ...></text-field>
       </stack-layout>
