--- a/src/app/user/components/login/login.component.scss
+++ b/src/app/user/components/login/login.component.scss
@@ -1,4 +1,15 @@
-.logo {
+.page {
+   align-items: center;
+   flex-direction: column;
+ }
+ .form {
+   margin-left: 30;
+   margin-right: 30;
+   flex-grow: 2;
+   vertical-align: middle;
+ }
+ 
+ .logo {
    margin-bottom: 12;
    height: 90;
    font-weight: bold;
