--- a/src/styles/solid.scss
+++ b/src/styles/solid.scss
@@ -2,6 +2,7 @@
  * Font Awesome Free 5.3.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
+@import './cg-variables.scss';
 @import 'variables';
 
 // @font-face {
@@ -21,6 +22,7 @@
   font-family: 'fa-solid-900';
   font-weight: 900;
   font-style: normal;
+  color: $primary;
 }
 
  /* Rules for sizing the icon. */
